--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,16 @@
 ---
 
+AllCops:
+  TargetRubyVersion: 2.5
+
 Naming/UncommunicativeMethodParamName:
   Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Style/FormatStringToken:
+  Enabled: false
+
+Metrics/AbcSize:
+  Max: 20
