run Ruby progs with Rakefile

--- a/crystal/Rakefile
+++ b/crystal/Rakefile
@@ -4,6 +4,8 @@ require_relative '../lib/rake_helpers'
 
 ALL_FILES = Pathname.new(__FILE__).dirname.children.sort
 
+task default: :run
+
 desc 'compile everything'
 task :build do
   ALL_FILES.select { |f| f.extname == '.cr' }.each do |src|
@@ -14,9 +16,7 @@ task :build do
   end
 end
 
-desc 'run all tests'
+desc 'run all programs'
 task run: :build do
-  ALL_FILES.select { |f| f.basename.to_s =~ /^\d+$/ }.each do |exe|
-    run_prog(exe)
-  end
+  run_programs(ALL_FILES.select { |f| f.basename.to_s =~ /^\d+$/ })
 end
